tdf#118232 Allow load and insert of SVGs with no Geometry

Change-Id: Iaf3d6a0423c5f11dda1e623dd730af01dbd6551c